<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.RegisterActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="64dp"
        app:srcCompat="@drawable/ic_dicoding_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_description"/>

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/register_title"
        android:fontFamily="@font/inter_bold"
        android:textSize="24sp"
        android:textColor="@color/dicoding_primary"
        android:gravity="center"
        android:alpha="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <TextView
        android:id="@+id/tv_register_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/register_description"
        android:fontFamily="@font/inter"
        android:textSize="16sp"
        android:textColor="@color/dicoding_primary"
        android:gravity="center"
        android:alpha="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register_title" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/name_title"
        android:textColor="@color/dicoding_primary"
        android:labelFor="@id/ti_register_name"
        android:alpha="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_register_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="2dp"
        android:alpha="1"
        app:startIconDrawable="@drawable/ic_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:ems="10"
            android:hint="@string/name_title"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/email_title"
        android:textColor="@color/dicoding_primary"
        android:fontFamily="@font/inter"
        android:labelFor="@id/ti_register_email"
        android:alpha="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_register_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_register_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="2dp"
        android:alpha="1"
        app:startIconDrawable="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email">

        <com.fathoor.storyapi.view.custom.Email
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:ems="10"
            android:hint="@string/email_title"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/password_title"
        android:textColor="@color/dicoding_primary"
        android:labelFor="@id/ti_register_password"
        android:alpha="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_register_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_register_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="2dp"
        android:alpha="1"
        app:startIconDrawable="@drawable/ic_lock"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password">

        <com.fathoor.storyapi.view.custom.Password
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="40dp"
            android:fontFamily="@font/inter"
            android:ems="10"
            android:hint="@string/password_title"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginHorizontal="32dp"
        android:paddingHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/dicoding_primary"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/register_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:alpha="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_register_password" />

</androidx.constraintlayout.widget.ConstraintLayout>