<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/cpi_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:elevation="1dp"
            app:indicatorColor="@color/dicoding_primary"
            app:indicatorSize="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/layout_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/top_app_bar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:titleCentered="true"
                    app:title="@string/add_title"
                    app:titleTextColor="@color/white"
                    app:titleTextAppearance="@style/ToolbarTitleAppearance"
                    app:navigationIcon="@drawable/ic_back" />

            </com.google.android.material.appbar.AppBarLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginVertical="32dp"
            style="?attr/materialCardViewFilledStyle"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_appbar">

            <ImageView
                android:id="@+id/iv_add_photo"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/accessibility_add_photo" />

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:paddingVertical="16dp"
            android:paddingHorizontal="32dp"
            android:backgroundTint="@color/dicoding_primary"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/camera_button"
            android:textColor="@color/dicoding_secondary"
            android:textSize="16sp"
            android:alpha="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/card" />

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:paddingVertical="16dp"
            android:paddingHorizontal="32dp"
            android:backgroundTint="@color/dicoding_primary"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/gallery_button"
            android:textColor="@color/dicoding_secondary"
            android:textSize="16sp"
            android:alpha="1"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_add_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:hint="@string/add_description"
            android:alpha="1"
            app:hintTextColor="@color/dicoding_primary"
            app:boxStrokeColor="@color/dicoding_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_camera">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLines="3" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/sw_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_location"
            android:checked="false"
            app:thumbTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_add_description" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="32dp"
            android:paddingVertical="16dp"
            android:paddingHorizontal="32dp"
            android:backgroundTint="@color/dicoding_primary"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/upload_button"
            android:textColor="@color/dicoding_secondary"
            android:textSize="16sp"
            android:alpha="1"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sw_location" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>