<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.LoginActivity">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cpi_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/dicoding_primary"
        app:indicatorSize="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="64dp"
        app:srcCompat="@drawable/ic_dicoding_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_description"/>

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/login_title"
        android:fontFamily="@font/inter_bold"
        android:textSize="24sp"
        android:textColor="@color/dicoding_primary"
        android:gravity="center"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_login_logo" />

    <TextView
        android:id="@+id/tv_login_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/login_description"
        android:fontFamily="@font/inter"
        android:textSize="16sp"
        android:textColor="@color/dicoding_primary"
        android:gravity="center"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/email_title"
        android:textColor="@color/dicoding_primary"
        android:fontFamily="@font/inter"
        android:labelFor="@id/ti_login_email"
        android:visibility="visible"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_login_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:alpha="0"
        app:startIconDrawable="@drawable/ic_email"
        app:hintEnabled="false"
        app:hintTextColor="@color/dicoding_primary"
        app:boxStrokeColor="@color/dicoding_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email">

        <com.fathoor.storyapi.view.custom.Email
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:ems="10"
            android:hint="@string/email_title"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/password_title"
        android:textColor="@color/dicoding_primary"
        android:labelFor="@id/ti_login_password"
        android:visibility="visible"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_login_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_login_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:alpha="0"
        app:startIconDrawable="@drawable/ic_lock"
        app:hintEnabled="false"
        app:hintTextColor="@color/dicoding_primary"
        app:boxStrokeColor="@color/dicoding_primary"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password">

        <com.fathoor.storyapi.view.custom.Password
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="48dp"
            android:fontFamily="@font/inter"
            android:ems="10"
            android:hint="@string/password_title"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:paddingHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/dicoding_primary"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/login_button"
        android:textColor="@color/dicoding_secondary"
        android:textSize="20sp"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_login_password" />

</androidx.constraintlayout.widget.ConstraintLayout>